<resources>
    <string name="app_name">WGPlaner</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- String related to NavView -->
    <string name="nav_dashboard">Dashboard</string>
    <string name="nav_shopping_list">Shopping List</string>
    <string name="nav_accounting">Accounting</string>
    <string name="nav_rosters">Rosters</string>
    <string name="nav_calendar">Calendar</string>
    <string name="nav_pinboard">Pinboard</string>

</resources>
